# qos

./: .gitignore  CMakeLists.txt  logo.rc  main.cpp  res.qrc
src/center/: gateway.cpp  gateway.h  managermodel.cpp  managermodel.h  osmockdata.cpp  osmockdata.h  qosplugin.cpp  qosplugin.h
src/dao/: DaoClouds.h  daocloudcos.cpp  daocloudcos.h  daocloudmock.cpp  daocloudmock.h  entityclass.h
src/helper/: FileHelper.h  Public.h  Singleton.h  commonformat.h  gateway.cpp  gateway.h
src/model/: bucket.h  bucketmodel.cpp  bucketmodel.h
src/plugins/: qosplugin.cpp
src/uicom/: basedialog.cpp  basedialog.h  basedialog.ui  breadwidget.cpp  breadwidget.h  breadwidget.ui  comboline.cpp  comboline.h  pagewidget.cpp  pagewidget.h  pagewidget.ui  qosdialog.cpp  qosdialog.h  qosdialog.ui  uibasedialog.cpp  uibasedialog.h  uibreadwidget.cpp  uibreadwidget.h  uicomboline.cpp  uicomboline.h  uipagewidget.cpp  uipagewidget.h  uipagewidget.ui  uiqosdialog.cpp  uiqosdialog.h
src/uidelegate/: bucketdeleagte.cpp  bucketdeleagte.h  uibucketdeleagte.cpp  uibucketdeleagte.h
src/uilogin/: logindialog.cpp  logindialog.h  logindialog.ui  uilogindialog.cpp  uilogindialog.h  uilogindialog.ui
src/uimain/: bucketstablewidget.cpp  bucketstablewidget.h  bucketstablewidget.ui  bucketswidget.cpp  bucketswidget.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  objectstablewidget.cpp  objectstablewidget.h  objectstablewidget.ui  objectswidget.cpp  objectswidget.h  objectswidget.ui  toolbarwidget.cpp  toolbarwidget.h  toolbarwidget.ui  uibucketstablewidget.cpp  uibucketstablewidget.h  uibucketstablewidget.ui  uibucketswidget.cpp  uibucketswidget.h  uibucketswidget.ui  uimainwidget.cpp  uimainwidget.h  uimainwidget.ui  uiobjectstablewidget.cpp  uiobjectstablewidget.h  uiobjectstablewidget.ui
static/: bucketsTest.json  default.qss  mockTest.json
